<resources>
    <!-- General strings -->
    <string name="app_name" translatable="false">Fontys Social</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_friends">Friends</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log out</string>
    <string name="action_logout_searching">Log out (…)</string>
    <string name="action_agenda">Agenda</string>
    <string name="app_subtitle">Your personal event planner!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login and signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="signup_email">Email</string>
    <string name="signup_pseudo">Pseudo</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_check">Password Validation</string>
    <string name="signup_failed">Sign up failed, please retry.</string>
    <string name="login_failed">Authentication failed, please retry.</string>
    <string name="login_noaccount">If you don\'t have an account, please first sign up by clicking on the button!</string>
    <string name="login_signup">Sign up</string>
    <string name="login_signin">Sign in</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="signup_register">Register</string>
    <string name="signup_cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="password_check">Password Validation</string>

    <!-- Strings related to events -->
    <string name="event_addevent">Add an event</string>
    <string name="event_name">Name of the event:</string>
    <string name="event_nameinput">Name</string>
    <string name="event_address">Address of the event:</string>
    <string name="event_addressinput">Address</string>
    <string name="event_startdate">Start date of the event:</string>
    <string name="event_startdateinput">Start date</string>
    <string name="event_starttimeinput">Start time</string>
    <string name="event_enddate">End date of the event:</string>
    <string name="event_enddateinput">End date</string>
    <string name="event_endtimeinput">End time</string>
    <string name="event_incorrectaddress">Incorrect address</string>
    <string name="event_incorrectaddressdesc">The address you typed is incorrect, please retry.</string>
    <string name="event_ok">OK</string>
    <string name="event_desc">Short description of the event:</string>
    <string name="event_descinput">Description</string>
    <string name="mapevent_address">"Address:"</string>
    <string name="mapevent_start">Start:</string>
    <string name="mapevent_at">at</string>
    <string name="mapevent_end">End:</string>
    <string name="mapevent_close">Close</string>
    <string name="mapevent_remove">Remove</string>
    <string name="mapevent_distance">Distance from you:</string>
    <string name="event_incorrectfields">Incorrect fields</string>
    <string name="event_incorrectfieldsdesc">The fields you typed are incorrect!</string>

    <!-- Strings related to permissions -->
    <string name="permission_locationerror">Location error</string>
    <string name="permission_locationerrordesc">Location authorization is required to work correctly. Please enable it to use this app.</string>
    <string name="permission_locationok">OK</string>

    <!-- Strings related to profile and settings -->
    <string name="profile_en">English</string>
    <string name="profile_fr">French</string>
    <string name="profile_title">Profile settings</string>
    <string name="profile_firstname">First name:</string>
    <string name="profile_firstnameinput">First name</string>
    <string name="profile_lastname">Last name:</string>
    <string name="profile_lastnameinput">Last name</string>
    <string name="profile_shareposition">Share your position to others:</string>
    <string name="profile_sharepositionyes">Yes, I want to share my position</string>
    <string name="profile_sharepositionno">No, I don\'t want to share my position</string>
    <string name="profile_language">Language of the app:</string>
    <string name="settings_saved">Settings saved successfully!</string>
    <string name="settings_cancelled">Settings cancelled.</string>

    <!-- Strings related to notifications -->
    <string name="notif_close">Some people or events are close to you!</string>
    <string name="notif_one_obj">An event or someone is close. Check it!</string>
    <string name="notif_sev_obj">Some events or people are close. Check it!</string>
    <string name="pseudo">Pseudo</string>

    <!-- Strings related to agenda -->
    <string name="agenda_title">Events agenda</string>
    <string name="agenda_at">at</string>
</resources>
